--- a/src/pages/blog/2018-07-06-test.md
+++ b/src/pages/blog/2018-07-06-test.md
@@ -8,4 +8,4 @@ attachments:
 related:
   - post: /welcome
 ---
-hello world
+<iframe height="400px" width="100%" src="https://repl.it/@erikreyna/js-001?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
